updated tabs design, integrated database, created post user api

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVuZXdlZC1kYXNzaWUtOTAuY2xlcmsuYWNjb3VudHMuZGV2JA
+DATABASE_URL=postgresql://jsm_ryde_owner:siJg7lYnmOw6@ep-lively-wave-a1z8f44k.ap-southeast-1.aws.neon.tech/jsm_ryde?sslmode=require
+EXPO_PUBLIC_SERVER_URL=https://uber.com/
